before transfer to heroku

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -3,22 +3,21 @@
 {% block content %}
 
     <div class="login-page">
-  <div class="form">
-      <img src="{% static 'images/logo.png' %}">
-    <form class="register-form">
-      <input type="text" placeholder="name"/>
-      <input type="password" placeholder="password"/>
-      <input type="text" placeholder="email address"/>
-      <button>create</button>
-      <p class="message">Already registered? <a href="#">Sign In</a></p>
-    </form>
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-      <p class="message"><a href="#">Forgot password?</a></p>
-    </form>
-  </div>
-</div>
+        <div class="form" >
+            <img src="{% static 'images/logo.png' %}">
+
+            <form class="login-form" method="POST">{% csrf_token %}
+              <input type="text" name="username" placeholder="username"/>
+              <input type="password" name="password" placeholder="password"/>
+              <button type="submit">login</button>
+              <p class="message"><a href="#">Forgot password?</a></p>
+
+                {% if error %}
+                <p style="color:#CC085E;"><strong>{{ error }}</strong></p>
+                {% endif %}
+
+            </form>
+        </div>
+    </div>
 
 {% endblock %}
