--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,23 +1,77 @@
-{% extends 'base.html'%}
 {% load static %}
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Allied Rent A Car DamageID</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" >
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" >
 
-    <div class="login-page">
-        <div class="form" >
-            <img src="{% static 'images/logo.png' %}">
 
-            <form class="login-form" method="POST">{% csrf_token %}
-              <input type="text" name="username" placeholder="username"/>
-              <input type="password" name="password" placeholder="password"/>
-              <button type="submit">login</button>
-              <p class="message"><a href="#">Forgot password?</a></p>
-
-                {% if error %}
-                <p style="color:#CC085E;"><strong>{{ error }}</strong></p>
-                {% endif %}
-
-            </form>
+</head>
+<body class="fixed-header ">
+    <div class="login-wrapper ">
+      <!-- START Login Background Pic Wrapper-->
+      <div class="bg-pic">
+        <!-- START Background Pic-->
+        <img src="{% static 'images/loginimage.jpg' %}" data-src="{% static 'images/loginimage.jpg' %}" data-src-retina="{% static 'images/loginimage.jpg' %}" alt="" class="lazy">
+        <!-- END Background Pic-->
+        <!-- START Background Caption-->
+        <div class="bg-caption pull-bottom sm-pull-bottom text-white p-l-20 m-b-20">
+          <h2 class="semi-bold text-white">
+					 Allied Rent A Car is one of the largest privately owned vehicle Rental Companies</h2>
+          <p class="small">
+            Allied has convenient locations to satisfy every renter’s need.
+          </p>
         </div>
+        <!-- END Background Caption-->
+      </div>
+      <!-- END Login Background Pic Wrapper-->
+      <!-- START Login Right Container-->
+      <div class="login-container bg-white">
+        <div class="p-l-50 m-l-20 p-r-50 m-r-20 p-t-50 m-t-30 sm-p-l-15 sm-p-r-15 sm-p-t-40">
+          <img src="{% static 'images/logo.png' %}" alt="logo" data-src="{% static 'images/logo.png' %}" data-src-retina="{% static 'images/logo.png' %}" width="300" height="137" style="display: block;margin: auto">
+          <p class="p-t-35">Sign into your account</p>
+          <!-- START Login Form -->
+          <form id="form-login" class="p-t-15" role="form" action="{% url 'home' %}" method="POST">
+              {% csrf_token %}
+            <!-- START Form Control-->
+            <div class="form-group form-group-default">
+              <label>Login</label>
+              <div class="controls">
+                <input type="text" name="username" placeholder="User Name" class="form-control" required>
+              </div>
+            </div>
+            <!-- END Form Control-->
+            <!-- START Form Control-->
+            <div class="form-group form-group-default">
+              <label>Password</label>
+              <div class="controls">
+                <input type="password" class="form-control" name="password" placeholder="Credentials" required>
+              </div>
+            </div>
+
+            <button class="btn btn-primary btn-cons m-t-20" type="submit">Sign in</button>
+              <span id="forgetpassword" class="m-t-20">Forget password ?</span>
+          </form>
+          <!--END Login Form-->
+          <div class="pull-bottom sm-pull-bottom">
+            <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
+              <div class="col-sm-12 no-padding m-t-10">
+                <p style="color: #b6b8b9">
+                    Copyright © 2017 AlliedRentACAR
+                        </br>All rights reserved
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- END Login Right Container-->
     </div>
 
-{% endblock %}
+  </body>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+</html>
