--- a/accounting/templates/accounting/dashboard.html
+++ b/accounting/templates/accounting/dashboard.html
@@ -3,12 +3,12 @@
 {% block content %}
 
     <h1>Articles</h1>
-<ul>
-{% for post in posts %}
-    <li>{{ post.rearImg }} </li>
-{% empty %}
-    <li>No articles yet.</li>
-{% endfor %}
-</ul>
-
+    <div ng-controller="alliedController">
+        <ul ng-repeat="post in posts">
+            <li>{% verbatim %}{{ post.plateNumber }} {% endverbatim %}</li>
+            <li>{% verbatim %}{{ post.dateTime }} {% endverbatim %}</li>
+        </ul>
+    </div>
+    <script src="{% static 'js/angular.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/controller/alliedrentacar.js' %}" type="text/javascript"></script>
 {% endblock %}
