--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,77 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="allied">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Allied Rent A Car DamageID</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'css/alliedrentacar.css' %}">
+
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/alliedrentacar.css' %}" rel="stylesheet">
+
+
 </head>
 <body>
+     <!-- Navigation Start -->
+        <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top" style="background-color: #fff;height: 100px">
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="container">
+            <img src="{% static 'images/logoSmall.png' %}">
+
+            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Welcome,</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Users</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Cars</a>
+                </li>
+                <li class="nav-item" style="list-style-image: url({% static 'images/case.png' %})">
+
+                  <a class="nav-link" href="#">Case List</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Logout</a>
+                </li>
+
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form>
+            </div>
+          </div>
+        </nav>
+     <!-- Navigation End -->
+
+     <!-- Header Start -->
+        <div class="jumbotron">
+          <div class="container">
+            <h1 class="display-3">Hello, world!</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+          </div>
+        </div>
+     <!-- Header End -->
+
     {% block content %}
 
     {% endblock %}
 
+
+    <!-- Footer Start -->
+     <hr>
+          <footer>
+            <p>&copy; Company 2017</p>
+          </footer>
+    <!-- Footer End -->
+
 </body>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 </html>
