--- a/static/css/alliedrentacar.css
+++ b/static/css/alliedrentacar.css
@@ -1,3 +1,28 @@
+/* body */
 body {
-  padding-top: 3rem;
+  padding-top: 5rem;
+}
+/* nav background */
+.bg-inverse {
+    background-color: #fff!important;
+}
+/* nav font */
+.navbar-inverse .navbar-nav .nav-link {
+    color: #626262;
+}
+.navbar-inverse .navbar-nav .active>.nav-link, .navbar-inverse .navbar-nav .nav-link.active, .navbar-inverse .navbar-nav .nav-link.open, .navbar-inverse .navbar-nav .open>.nav-link {
+    color: #626262;
+}
+/* mobile nav button */
+.navbar-toggler-right {
+  position: absolute;
+  right: 1rem;
+  margin-top: 2rem;
+}
+
+.navbar-inverse .navbar-nav .nav-link:focus, .navbar-inverse .navbar-nav .nav-link:hover {
+    color: #ce8f22;
+}
+.navbar-nav > li{
+  margin-left: 2rem;
 }
