--- a/templates/base.html
+++ b/templates/base.html
@@ -13,40 +13,39 @@
 </head>
 <body>
      <!-- Navigation Start -->
-        <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top" style="background-color: #fff;height: 100px">
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="container">
-            <img src="{% static 'images/logoSmall.png' %}">
+         <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon" style="background-image: url({% static 'images/menu.png' %})"></span>
+      </button>
+        <div class="container" >
+      <img src="{% static 'images/logoSmall.png' %}">
 
-            <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Welcome,</a>
+      <div class="collapse navbar-collapse justify-content-end"  id="navbarsExampleDefault">
+        <ul class="nav navbar-nav">
+          <li class="nav-item active">
+                  <a class="nav-link font-weight-bold" href="#"><img src="{% static 'images/welcome.png' %}">
+                      <span>Welcome, David Sun</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Users</a>
+                <li class="nav-item font-weight-bold">
+                  <a class="nav-link" href="#"><img src="{% static 'images/users.png' %}">
+                      <span>Users</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Cars</a>
+                <li class="nav-item font-weight-bold">
+                  <a class="nav-link" href="#"><img src="{% static 'images/car.png' %}">
+                      <span>Cars</span></a>
                 </li>
-                <li class="nav-item" style="list-style-image: url({% static 'images/case.png' %})">
-
-                  <a class="nav-link" href="#">Case List</a>
+                <li class="nav-item font-weight-bold">
+                  <a class="nav-link" href="#"><img src="{% static 'images/case.png' %}">
+                      <span>Case List</span></a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Logout</a>
+                <li class="nav-item font-weight-bold">
+                  <a class="nav-link" href="#"><img src="{% static 'images/logout.png' %}">
+                      <span>Logout</span></a>
                 </li>
-
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </div>
-        </nav>
+        </ul>
+      </div>
+      </div>
+    </nav>
      <!-- Navigation End -->
 
      <!-- Header Start -->
@@ -72,6 +71,10 @@
     <!-- Footer End -->
 
 </body>
+     <!-- Placed at the end of the document so the pages load faster -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+ <script src="{% static 'js/jquery-slim.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 </html>
