working on datepicker

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,10 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/alliedrentacar.css' %}" rel="stylesheet">
 
+    <!-- Angular -->
+
+    <script src="{% static 'js/angular.min.js' %}"></script>
+    <script src="{% static 'js/controller/alliedrentacar.js' %}"></script>
 
 </head>
 <body>
@@ -39,7 +43,7 @@
                       <span>Case List</span></a>
                 </li>
                 <li class="nav-item font-weight-bold">
-                  <a class="nav-link" href="#"><img src="{% static 'images/logout.png' %}">
+                  <a class="nav-link" href="{% url 'accounting:logout' %}"><img src="{% static 'images/logout.png' %}">
                       <span>Logout</span></a>
                 </li>
         </ul>
@@ -51,7 +55,9 @@
      <!-- Header Start -->
         <div class="jumbotron">
           <div class="container">
-            <h1 class="display-3">Hello, world!</h1>
+            <h1 class="display-5">REVIEW PORTAL - {% block reviewport %}{% endblock %}</h1>
+
+
             <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
             <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
           </div>
@@ -72,9 +78,14 @@
 
 </body>
      <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
- <script src="{% static 'js/jquery-slim.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="{% static 'js/jquery-slim.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    <script src="{% static 'js/ui-bootstrap-2.5.0.min.js' %}"></script>
+
+
+
+
 </html>
