--- a/accounting/templates/accounting/dashboard.html
+++ b/accounting/templates/accounting/dashboard.html
@@ -1,2 +1,60 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block reviewport %}
+    CASE LIST
+{% endblock %}
+
+{% block content %}
+    <div class="container">
+        <table class="table table-hover" ng-controller="alliedController">
+            <div class="col-lg-6">
+    <div class="input-group">
+        <label for="exampleSelect1">FILTER BY CONTRACT NO.</label>
+      <input type="text" class="form-control" placeholder="Search for...">
+
+    </div>
+  </div>
+
+            <label for="exampleSelect1">FILTER BY DATE</label>
+    <select class="form-control" id="exampleSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+
+            <div class="col-md-6">
+        <p class="input-group">
+          <input type="text" class="form-control" uib-datepicker-popup ng-model="dt" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+        </p>
+      </div>
+
+          <thead>
+            <tr>
+              <th>CONTRACT NO.</th>
+              <th>UNIT NO.</th>
+              <th>USERNMAE</th>
+              <th>DATE OUT</th>
+              <th>DATE IN</th>
+              <th>DATE STATUS</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="post in posts">
+              <th>{% verbatim %}{{post.contractNumber}}{% endverbatim %}</th>
+              <td>{% verbatim %}{{post.plateNumber}}{% endverbatim %}</td>
+              <td>{% verbatim %}{{post.contractNumber}}{% endverbatim %}</td>
+              <td>{% verbatim %}{{post.dateOutTime}}{% endverbatim %}</td>
+              <td>{% verbatim %}{{post.dateInTime}}{% endverbatim %}</td>
+              <td>{% verbatim %}{{post.status}}{% endverbatim %}</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+
+{% endblock %}
