--- a/templates/signin.html
+++ b/templates/signin.html
@@ -55,6 +55,11 @@
             <button class="btn btn-primary btn-cons m-t-20" type="submit">Sign in</button>
               <span id="forgetpassword" class="m-t-20">Forget password ?</span>
           </form>
+            <br>
+            {% if error %}
+                <p class="error"><strong>{{ error }}</strong></p>
+            {% endif %}
+
           <!--END Login Form-->
           <div class="pull-bottom sm-pull-bottom">
             <div class="m-b-30 p-r-80 sm-m-t-20 sm-p-r-15 sm-p-b-20 clearfix">
