--- a/static/css/alliedrentacar.css
+++ b/static/css/alliedrentacar.css
@@ -1,7 +1,10 @@
-/* body */
-body {
-  padding-top: 5rem;
+body{
+    background-color: #fafafa;
 }
+.jumbotron .alliedheader{
+    background-color: #f5fbff;margin-top: 5rem
+}
+
 /* nav background */
 .bg-inverse {
     background-color: #fff!important;
@@ -15,16 +18,36 @@ body {
 }
 /* mobile nav button */
 .navbar-toggler-right {
-  position: absolute;
-  right: 1rem;
-  margin-top: 2rem;
+      position: absolute;
+      right: 1rem;
+      margin-top: 2rem;
 }
 
 .navbar-inverse .navbar-nav .nav-link:focus, .navbar-inverse .navbar-nav .nav-link:hover {
     color: #ce8f22;
 }
 .navbar-nav > li{
-  margin-left: 2rem;
+    margin-left: 2rem;
 }
 
 
+/* up arrow */
+table .sortorder:after {
+  color: #99a7b9;
+  content: '\25b2';
+
+}
+table .sortorder.reverse:after {
+    content: '\25bc';
+    color:#99a7b9;
+
+}
+
+/* reset password toolbar */
+md-toolbar.md-default-theme.md-hue-2:not(.md-menu-toolbar), md-toolbar.md-hue-2:not(.md-menu-toolbar) {
+    background-color: #4285f4;
+    color: #fff;
+}
+.container_password{
+    padding: 4rem 2rem;
+}
