--- a/templates/base.html
+++ b/templates/base.html
@@ -1,26 +1,7 @@
+{% extends 'superbase.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en" ng-app="allied">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Allied Rent A Car DamageID</title>
+{% block base %}
 
-    <!-- Angular -->
-    <script src="{% static 'node_modules/angular/angular.min.js' %}"></script>
-    <script src="{% static 'js/angular-animate.min.js' %}"></script>
-    <script src="{% static 'js/angular-aria.min.js' %}"></script>
-    <script src="{% static 'js/angular-messages.min.js' %}"></script>
-    <script src="{% static 'node_modules/angular-material/angular-material.min.js' %}"></script>
-    <script src="{% static 'js/controller/alliedrentacar.js' %}"></script>
-
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'node_modules/angular-material/angular-material.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/alliedrentacar.css' %}" rel="stylesheet">
-
-
-</head>
-<body>
      <!-- Navigation Start -->
          <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,7 +39,7 @@
      <!-- Navigation End -->
 
      <!-- Header Start -->
-        <div class="jumbotron" style="background-color: #f5fbff  ">
+        <div class="jumbotron alliedheader" >
           <div class="container">
             <h1 class="display-5">REVIEW PORTAL - {% block reviewport %}{% endblock %}</h1>
           </div>
@@ -77,18 +58,5 @@
           </footer>
     <!-- Footer End -->
 
-</body>
-     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="{% static 'js/jquery-slim.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 
-
-
-
-
-
-
-</html>
+{% endblock %}
