F: reset password send email page T: reset password done page

--- a/accounting/templates/accounting/dashboard.html
+++ b/accounting/templates/accounting/dashboard.html
@@ -5,7 +5,7 @@
     CASE LIST
 {% endblock %}
 
-{% block content %}
+{% block base %}
 
 <div class="container" ng-controller="alliedController">
 
