--- a/templates/registration/password_reset_base.html
+++ b/templates/registration/password_reset_base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static%}
 <!DOCTYPE html>
 
 <html lang="en" ng-app="allied">
@@ -16,23 +16,46 @@
 
 </head>
 <body>
-{% block base %}
 
-{% endblock %}
+
+            <div style="background-color: white">
+
+                <div class="container">
+
+                    <img src="{% static 'images/logoSmall.png' %}">
+
+                </div>
+            </div>
+
+
+
+            <md-content>
+                <md-toolbar class="md-hue-2">
+                  <div class="md-toolbar-tools">
+                      <div class="container">
+                      <h2><strong>{% block headertitle_password %}
+
+                      {% endblock %}</strong></h2>
+                          </div>
+                  </div>
+                </md-toolbar>
+            </md-content>
+
+
+            {% block passwordbase %}
+
+            {% endblock %}
 
 </body>
-     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="{% static 'js/jquery-slim.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
     <!-- Angular -->
     <script src="{% static 'node_modules/angular/angular.min.js' %}"></script>
     <script src="{% static 'js/angular-animate.min.js' %}"></script>
-    <script src="{% static 'js/angular-aria.min.js' %}"></script>
+
     <script src="{% static 'js/angular-messages.min.js' %}"></script>
     <script src="{% static 'node_modules/angular-material/angular-material.min.js' %}"></script>
     <script src="{% static 'js/controller/alliedrentacar.js' %}"></script>
 
 </html>
+
+
+
