--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,12 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    <!-- ImageZoom -->
+    <script src="{% static 'js/wheelzoom.js' %}"></script>
+    <script>$(document).ready(function() {
+      // assign wheelzoom
+      wheelzoom(document.querySelectorAll('.imageZoom'));
+    })</script>
     <!-- Angular -->
     <script src="{% static 'node_modules/angular/angular.min.js' %}"></script>
     <script src="{% static 'js/angular-animate.min.js' %}"></script>
