--- a/accounting/templates/accounting/dashboard.html
+++ b/accounting/templates/accounting/dashboard.html
@@ -7,7 +7,7 @@
 
 {% block base %}
 
-<div class="container" ng-controller="alliedController" ng-cloak>
+<div class="container" ng-controller="caseListCtl" ng-cloak>
 
     <div  layout-padding ng-cloak>
 
@@ -97,5 +97,9 @@
 
 
 </div>
+{% endblock %}
+
+{% block customJS %}
+     <script src="{% static 'js/controller/caseList.js' %}"></script>
 {% endblock %}
 
